syntax = "proto3";
package bili;

message Bili {
    map<string, string> cookies = 1;
}

message BiliRes {
    string bvid = 1;
    string title = 2;
    int32 status = 3;
    int64 cid = 4;
    Upper owner = 5;
    Qn qn = 6;
    repeated BiliPage pages = 15;
}

message BiliPage {
    int64 cid = 1;
    int32 page = 2;
    string part = 3;
}

message Upper {
    int64 mid = 1;
    string name = 2;
}

message BiliSet {
    int64 id = 1;
    string title = 2;
    int32 status = 3;
    int32 media_count = 4;
    Upper upper = 14;
    repeated BiliRes medias = 15;
}

message BiliSets {
    repeated BiliSet list = 15;
}

enum Qn {
    Default = 0;
    // 8k
    EightK = 127;
    // Dolby Vision
    Dolby = 126;
    // HDR
    HDR = 125;
    // 4K
    FourK = 120;
    // 1080P60
    FullHDHighFrame = 116;
    // 1080+
    FullHDHighCode = 112;
    // 1080P
    FullHD = 80;
    // 720P60
    HDHighFrame = 74;
    // 720P
    HD = 64;
    // 480P
    SD = 32;
    // 360P
    LD = 16;
    // 240P
    VLD = 6;
}
