syntax = "proto3";
package data;

message Cookie {
    string DedeUserID = 1;
    string DedeUserID__ckMd5 = 2;
    string SESSDATA = 3;
    string bili_jct = 4;
}

message ListMeta {
    int64 id = 1;
    string title = 2;
    int32 media_count = 3;
    optional string clarity = 4;
}

message VideoMeta {
    int64 id = 1;
    string title = 2;
    UserMeta upper = 3;
    string clarity = 4;
}

message UserMeta {
    int64 id = 1;
    string name = 2;
}

message Meta {
    repeated VideoMeta sav_and_fav = 1;
    repeated VideoMeta sav_but_nonfav = 2;
    repeated VideoMeta not_sav_but_fav = 3;
    repeated VideoMeta not_sav_anymore = 4;
    repeated ListMeta list = 5;
}
